--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.10</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>21.0</version>
+    </dependency>
 
 
   </dependencies>
